Fixed z-index of modals//chat/errors

--- a/imports/ui/error-message/error-message.scss
+++ b/imports/ui/error-message/error-message.scss
@@ -7,7 +7,7 @@
   border-radius: 10px;
   background-color: rgba(0, 0, 0, 0.7);
   box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.3);
-  z-index: 2000;
+  z-index: 100002;
 }
 .show-error {
   animation-name: appear;
