--- a/imports/ui/stylesheets/base.scss
+++ b/imports/ui/stylesheets/base.scss
@@ -16,7 +16,7 @@ body {
   height: 100% !important;
 }
 
-/* scrollbar */
+// Scrollbar
 *::-webkit-scrollbar {
   width: 10px!important;
 }
@@ -30,19 +30,19 @@ body {
   background-color: $scrollbar-color;
 }
 
-/* Inputs blue border */
+// Inputs blue border
 input:focus, select:focus, textarea:focus, button:focus {
   border-color: #ccc !important;
   outline: none !important;
   box-shadow: none !important;
 }
 
-/* btn */
+// btn */
 .btn-default:active {
   box-shadow: none !important;
 }
 
-/* override jquery-ui styles */
+// override jquery-ui styles
 .ui-icon, .ui-widget-content .ui-icon {
   background-image: url("https://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/images/ui-icons_222222_256x240.png") !important;
 }
@@ -50,7 +50,7 @@ input:focus, select:focus, textarea:focus, button:focus {
   background-position: -78px -222px !important;
 }
 
-/* not-found */
+// Not found
 .not-found {
   width: 100vw;
   height: 100vh;
@@ -61,7 +61,7 @@ input:focus, select:focus, textarea:focus, button:focus {
   background-color: #fff;
 }
 
-/* loading */
+// Loading
 .loading {
   height: 100%;
   width: 100%;
@@ -70,8 +70,8 @@ input:focus, select:focus, textarea:focus, button:focus {
     position: absolute;
     left: calc(50% - 25px);
     top: calc(50% - 25px);
-    border: 5px solid #f3f3f3; /* Light grey */
-    border-top: 5px solid #3498db; /* Blue */
+    border: 5px solid #f3f3f3; // Light grey
+    border-top: 5px solid #3498db; // Blue
     border-radius: 50%;
     width: 50px;
     height: 50px;
@@ -84,4 +84,9 @@ input:focus, select:focus, textarea:focus, button:focus {
   50% { border-top-color: #f1c40f; }
   75% { border-top-color: #e74c3c; }
   100% { transform: rotate(720deg); border-top-color: #3498db; }
+}
+
+// Modal z-index
+.modal-backdrop {
+  z-index: 100001
 }
